Update project structure

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,6 @@ project(mahjong_engine)
 
 set(CMAKE_CXX_STANDARD 23)
 
-add_executable(mahjong_engine main.cpp)
+include_directories(include)
+file(GLOB SRC src/*.cpp)
+add_executable(mahjong_engine ${SRC})
